# platrix

./: CMakeLists.txt  LICENSE  README.md  mainwindow.h
.github/workflows/: build.yml
app/: CMakeLists.txt  main.cpp  mainwindow.cpp
distribution/: platrix.desktop
src/app/: CMakeLists.txt  filemodel.h  main.cpp  mainwindow.cpp  mainwindow.h  settingsdialog.h  settingsmanager.h  themesdialog.h
src/app/includes/: codeeditor.h  extensionsdialog.h  filemodel.h  framelessdialog.h  mainwindow.h  settingsdialog.h  settingsmanager.h  syntaxhighlighter.h
src/app/ressources/: dark.qss  light.qss  ressources.qrc
src/app/ressources/syntaxes/: python.strl
src/app/ressources/themes/: dark.qss  light.qss
src/app/src/: codeeditor.cpp  extensionsdialog.cpp  filemodel.cpp  framelessdialog.cpp  mainwindow.cpp  settingsdialog.cpp  settingsmanager.cpp  syntaxhighlighter.cpp
